RESOLVED FIXED116133
Printing in 1Password app is broken with screen fonts disabled
https://bugs.webkit.org/show_bug.cgi?id=116133
Summary Printing in 1Password app is broken with screen fonts disabled
Beth Dakin
Reported 2013-05-14 21:01:03 PDT
When we disabled screen fonts with http://trac.webkit.org/changeset/129593 we regressed printing in the 1Password app. <rdar://problem/13162981>
Attachments
Patch (1.69 MB, patch)
2013-05-14 21:07 PDT, Beth Dakin
andersca: review+
buildbot: commit-queue-
Beth Dakin
Comment 1 2013-05-14 21:07:09 PDT
Anders Carlsson
Comment 2 2013-05-14 21:21:17 PDT
Comment on attachment 201788 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=201788&action=review > Source/WebCore/platform/mac/WebCoreSystemInterface.mm:213 > +#if __MAC_OS_X_VERSION_MIN_REQUIRED >= 1090 > +bool (*wkExecutableWasLinkedOnOrBeforeMountainLion)(void); > +#endif Doesn't look like this is called from WebCore, you can remove it.
Build Bot
Comment 3 2013-05-14 21:23:14 PDT
Build Bot
Comment 4 2013-05-14 21:32:57 PDT
Beth Dakin
Comment 5 2013-05-14 21:35:31 PDT
Thank you! I removed the WebCore and WK2 code, and I believe I fixed the build problems as well: http://trac.webkit.org/changeset/150101
Ryosuke Niwa
Comment 6 2013-05-14 23:11:06 PDT
Beth Dakin
Comment 7 2013-05-15 11:29:55 PDT
(In reply to comment #6) > It seems like this patch broke two tests: > http://build.webkit.org/results/Apple%20MountainLion%20Release%20WK1%20(Tests)/r150101%20(9981)/results.html I rolled my change out of my tree locally and was still able to reproduce these two test failures, so I am not sure that this change is the one responsible.
Ryosuke Niwa
Comment 8 2013-05-15 11:58:57 PDT
(In reply to comment #7) > (In reply to comment #6) > > It seems like this patch broke two tests: > > http://build.webkit.org/results/Apple%20MountainLion%20Release%20WK1%20(Tests)/r150101%20(9981)/results.html > > I rolled my change out of my tree locally and was still able to reproduce these two test failures, so I am not sure that this change is the one responsible. There is exactly one changeset in the blame list: Pass: http://build.webkit.org/builders/Apple%20MountainLion%20Release%20WK1%20%28Tests%29/builds/9980 Fail: http://build.webkit.org/builders/Apple%20MountainLion%20Release%20WK1%20%28Tests%29/builds/9981
Ryosuke Niwa
Comment 9 2013-05-15 12:01:11 PDT
Beth Dakin
Comment 10 2013-05-15 20:01:40 PDT
(In reply to comment #9) > It also seems quite unlikely that 7 builders happen to observe the same flakiness: > http://webkit-test-results.appspot.com/dashboards/flakiness_dashboard.html#tests=platform%2Fmac%2Ffast%2Ftext%2Fthai-combining-mark-positioning.html Ugh. It is hard to deny that evidence! Unfortunately I haven't made any more progress on this though. I reverted my whole tree to the revision before my change and did a clean build; I was still able to reproduce the failure. On top of that, the failure is subtle, but you can clearly see it if you line up the Safari windows right. I am able to reproduce the failure with Nightly builds from before my change even though the bots didn't start seeing it until last night. I wish I had an explanation!
Ryosuke Niwa
Comment 11 2013-05-15 20:08:49 PDT
(In reply to comment #10) > > Unfortunately I haven't made any more progress on this though. I reverted my whole tree to the revision before my change and did a clean build; I was still able to reproduce the failure. On top of that, the failure is subtle, but you can clearly see it if you line up the Safari windows right. I am able to reproduce the failure with Nightly builds from before my change even though the bots didn't start seeing it until last night. I wish I had an explanation! Maybe builders got the OS update at the same time? It seems like we should just rebaseline the tests unless new results are somehow worse than the old ones.
Note You need to log in before you can comment on or make changes to this bug.