Printing in 1Password app is broken with screen fonts disabled https://bugs.webkit.org/show_bug.cgi?id=116133 -and corresponding- <rdar://problem/13162981>

Reviewed by Anders Carlsson.

Source/WebKit/mac:

Return YES from [WebPreferences screenFontSubstitutionEnabled] for versions of the
1Password app that were linked on or before MountainLion.

* WebView/WebPreferences.mm:
(needsScreenFontsEnabledQuirk):
(-[WebPreferences screenFontSubstitutionEnabled]):

WebKitLibraries:

Need WKExecutableWasLinkedOnOrBeforeMountainLion() for this quirk.

* libWebKitSystemInterfaceLion.a:
* libWebKitSystemInterfaceMountainLion.a:



Canonical link: https://commits.webkit.org/134533@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150101 268f45cc-cd09-0410-ab3c-d52691b4dbfc